<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_login">



    <fragment
        android:id="@+id/fragment_login"
        android:name="com.ulc.tbr.fragments.common.login.LoginFragment"
...
